# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = ["lib/know"]
resolver = "2"

[workspace.package]
version = "0.2.12"
authors = ["KNOW Project <support@know.dev>"]
edition = "2024"
#rust-version = "1.85"
description = "The KNOW Framework for Rust"
#documentation = "https://docs.rs/know"
readme = true
homepage = "https://know.dev"
repository = "https://github.com/know-ontology/know.rs"
license = "Unlicense"
keywords = []
categories = []
publish = true

[workspace.dependencies]
know = { path = "lib/know" }
know_yaml = { path = "lib/know_yaml" }
serde = { version = "1", features = ["derive"] }
tldr = { version = "0.1", package = "tldr-traits", default-features = false, features = [
    "builder",
] }
