[package]
name = "know"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["framework", "serde", "serialization"]
categories = ["data-structures"]
publish.workspace = true

[features]
default = ["all", "std"]
all = ["serde"]
std = []
serde = ["jiff/serde", "dep:cfg_eval", "dep:serde", "dep:serde_with"]

[dependencies]
cfg_eval = { version = "0.1.2", optional = true }
chrono = { version = "0.4.33", features = ["serde"], optional = true }
iri-string = { version = "0.7.0", features = ["serde"] }
jiff = { version = "0.2", default-features = false, features = [] }
thiserror = "1.0.56"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
serde_with = { version = "3.6.1", optional = true }
zerocopy = "0.7.11"
zerocopy-derive = "0.7.11"
zeroize = "1.6.0"

# Integrations:
imap-proto = { version = "0.16", default-features = false, optional = true }
maildir = { version = "0.6", default-features = false, optional = true }
mailparse = { version = "0.14", default-features = false, optional = true }
