[package]
name = "know"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["framework", "serde", "serialization"]
categories = ["data-structures"]
publish.workspace = true

[features]
default = ["all", "std"]
all = ["serde"]
alloc = []
std = [
    "alloc",
    "chrono?/std",
    "iri-string/std",
    "jiff/std",
    "serde?/std",
    "serde_json?/preserve_order",
    "serde_json?/std",
    "serde_with?/std",
    "zerocopy?/std",
    "zeroize?/std",
]

# Integrations:
maildir = ["dep:maildir", "mailparse"]
mailparse = ["dep:mailparse"]
serde = [
    "chrono?/serde",
    "iri-string/serde",
    "jiff/serde",
    "zeroize?/serde",
    "dep:cfg_eval",
    "dep:serde",
    "dep:serde_json",
    "dep:serde_with",
]

[dependencies]
cfg_eval = { version = "0.1", optional = true }
iri-string = { version = "0.7", default-features = false, features = ["alloc"] }
jiff = { version = "0.2", default-features = false, features = [] }
thiserror = "2"

# Integrations:
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
], optional = true }
imap-proto = { version = "0.16", default-features = false, optional = true }
mail-parser = { version = "0.11", default-features = false, optional = true }
maildir = { version = "0.6", default-features = false, optional = true }
mailparse = { version = "0.14", default-features = false, optional = true }
serde = { version = "1", default-features = false, features = [
    "alloc",
    "derive",
    "rc",
], optional = true }
serde_json = { version = "1", default-features = false, features = [
    "alloc",
], optional = true }
serde_with = { version = "3.14", default-features = false, features = [
    "alloc",
    "macros",
], optional = true }
zerocopy = { version = "0.8", default-features = false, features = [
    "alloc",
    "derive",
], optional = true }
zeroize = { version = "1.8", default-features = false, features = [
    "alloc",
    "derive",
], optional = true }
