[package]
name = "know_yaml"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["framework", "serde", "serialization"]
categories = ["data-structures"]
publish.workspace = true

[features]
default = ["all", "std"]
all = ["serde"]
alloc = ["know/alloc"]
std = ["alloc", "know/std", "serde?/std"]

# Integrations:
serde = ["know/serde", "dep:serde", "dep:serde_yaml"]

[dependencies]
know = { version = "0.2.5", path = "../know", default-features = false }
thiserror = "2"

# Integrations:
serde = { version = "1", default-features = false, features = [
    "alloc",
    "derive",
    "rc",
], optional = true }
serde_yaml = { version = "0.9", optional = true }
